feat(rate): inicio de construção do rate
